# cam3d

./: .gitignore  .gitmodules  CMakeLists.txt
include/: algorithm.hpp  frame_buffer.hpp  rasterizer.hpp  vector3.hpp
src/: algorithm.cpp  main.cpp  rasterizer.cpp
